fix icons' size add z-index to sidebar-menu

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -13,10 +13,10 @@
   pointer-events: none;
   visibility: hidden;
 
-  background-color: rgba(90, 93, 255, 0.3);
+  background-color: rgba(10, 110, 84, 0.68);
 
-  transition: opacity 600ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 600ms ease-in-out, visibility 600ms ease-in-out;
+  z-index: 9999999999999;
 }
 
 .sidebar-menu.is-open {
@@ -44,7 +44,7 @@
   /* =====animated menu appearance=========== */
 
   transform: translateX(0);
-  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 1800ms ease-in-out;
   /* ============================================ */
   opacity: 1;
   pointer-events: none;
@@ -61,6 +61,8 @@
 
 .header-mobile-menu-btn {
   position: absolute;
+  width: 34px;
+  height: 34px;
   top: 24px;
   right: 24px;
   background-color: transparent;
@@ -159,8 +161,15 @@
     background-position: center;
     background-size: cover;
   }
+
+  .header-mobile-menu-btn {
+    width: 40x;
+    height: 40px;
+  }
+
   .header-mobile-menu-btn-icon {
-    transform: scale(1.18);
+    width: 20px;
+    height: 20px;
   }
 }
 
@@ -183,7 +192,8 @@
 }
 
 .header-mobile-menu-social-media-link-icon {
-  transform: scale(1.1);
+  width: 20px;
+  height: 20px;
 }
 
 @media screen and (min-width: 1280px) {
